{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 17,
  "lineage": "22ce8c05-7be7-9bbc-e62d-8bc87172dc04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b9e02d464f5dad7",
            "arn": "arn:aws:ec2:us-east-1:561067235272:elastic-ip/eipalloc-09b9e02d464f5dad7",
            "association_id": "eipassoc-06383511f7a0ed002",
            "domain": "vpc",
            "id": "eipalloc-09b9e02d464f5dad7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b0389394e97882cb",
            "private_dns": "ip-10-0-1-227.ec2.internal",
            "private_ip": "10.0.1.227",
            "public_dns": "ec2-3-94-68-152.compute-1.amazonaws.com",
            "public_ip": "3.94.68.152",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnativedevopsplatform-nat-eip"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-nat-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561067235272:internet-gateway/igw-09d663652d0d356a1",
            "id": "igw-09d663652d0d356a1",
            "owner_id": "561067235272",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnativedevopsplatform-igw"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-igw"
            },
            "vpc_id": "vpc-0a98be80ae90e954d"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b9e02d464f5dad7",
            "association_id": "eipassoc-06383511f7a0ed002",
            "connectivity_type": "public",
            "id": "nat-005c342871e73472b",
            "network_interface_id": "eni-0b0389394e97882cb",
            "private_ip": "10.0.1.227",
            "public_ip": "3.94.68.152",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0266eb3721630cd97",
            "tags": {
              "Name": "cloudnativedevopsplatform-nat"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0771eb7c644d6651d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-005c342871e73472b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0771eb7c644d6651d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561067235272:route-table/rtb-0771eb7c644d6651d",
            "id": "rtb-0771eb7c644d6651d",
            "owner_id": "561067235272",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-005c342871e73472b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudnativedevopsplatform-private-route-table"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98be80ae90e954d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561067235272:route-table/rtb-0d15d4f210fda3300",
            "id": "rtb-0d15d4f210fda3300",
            "owner_id": "561067235272",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d663652d0d356a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudnativedevopsplatform-public-route-table"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98be80ae90e954d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086c0ac3163bedd60",
            "region": "us-east-1",
            "route_table_id": "rtb-0771eb7c644d6651d",
            "subnet_id": "subnet-014fdf94e1607588d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnet-private",
            "aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e1e3b1e1262e8dd",
            "region": "us-east-1",
            "route_table_id": "rtb-0771eb7c644d6651d",
            "subnet_id": "subnet-028bcf79931247460"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnet-private",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d44e771a7dabc4a",
            "region": "us-east-1",
            "route_table_id": "rtb-0d15d4f210fda3300",
            "subnet_id": "subnet-0266eb3721630cd97"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fdc164894e93404",
            "region": "us-east-1",
            "route_table_id": "rtb-0d15d4f210fda3300",
            "subnet_id": "subnet-01302ac8a5841f168"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561067235272:subnet/subnet-014fdf94e1607588d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014fdf94e1607588d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561067235272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnativedevopsplatform-private-1"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-private-1"
            },
            "vpc_id": "vpc-0a98be80ae90e954d"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561067235272:subnet/subnet-028bcf79931247460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028bcf79931247460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561067235272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnativedevopsplatform-private-2"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-private-2"
            },
            "vpc_id": "vpc-0a98be80ae90e954d"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561067235272:subnet/subnet-0266eb3721630cd97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0266eb3721630cd97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561067235272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnativedevopsplatform-public-1"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-public-1"
            },
            "vpc_id": "vpc-0a98be80ae90e954d"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561067235272:subnet/subnet-01302ac8a5841f168",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01302ac8a5841f168",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561067235272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnativedevopsplatform-public-2"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-public-2"
            },
            "vpc_id": "vpc-0a98be80ae90e954d"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561067235272:vpc/vpc-0a98be80ae90e954d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01fa3f0386ad4cd6f",
            "default_route_table_id": "rtb-0eea71e1afa37ec74",
            "default_security_group_id": "sg-0e69e1a2dd08ce128",
            "dhcp_options_id": "dopt-0c69c7602151bb14b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a98be80ae90e954d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eea71e1afa37ec74",
            "owner_id": "561067235272",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnativedevopsplatform-vpc-1"
            },
            "tags_all": {
              "Name": "cloudnativedevopsplatform-vpc-1"
            }
          }
        }
      ]
    }
  ]
}